erDiagram
    AUTHOR ||--|{ BOOK:"writes"
    COLLECTION_BOOKS }|--|| BOOK:"part of"
    COLLECTION ||--o{ COLLECTION_BOOKS:"contains"

    BOOK {
        serial book_id pk, fk
        serial author_id fk
        text title
        timestamp publish_date "NULLABLE"
        smallint edition  "NULLABLE"
        text description "NULLABLE"
        text genre "NULLABLE"
    }
    
    AUTHOR {
        serial author_id pk, fk
        text first_name
        text last_name
        serial genre_id fk
    }

    COLLECTION_BOOKS {
        serial collection_id pk, fk
        serial book_id pk, fk
    }

    COLLECTION {
        timestamp created_ts
        text title pk
    }
